--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
           <div class="profile-card-form__container">
             <b>This CPM.AnglicanBook app includes:</b>
             <ul>
-              Lyrics of all hymns, currently sung in CPM, which also contain over 14 hour long audio tracks of all those
+             <li>Lyrics of all hymns, currently sung in CPM, which also contain over 14 hour long audio tracks of all those
               songs in order that the congregation can sing along the hymns,
               </li>
-              <li>AllAll the entire book of common prayer in Myanmar, Karen, Kachin, Khumi_Chin and English Languages
+              <li>All the entire book of common prayer in Myanmar, Karen, Kachin, Khumi_Chin and English Languages
                 which has been developed to be used at convenience,
               </li>
               <li>The Holy Bible with the audio</li>
