--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#features">App Features</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -69,8 +69,8 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
+            </ul> -->
+          </li>
           <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li>  -->
           <!-- <li><a class="getstarted scrollto" href="https://www.paypal.com/donate/?hosted_button_id=Y9K24XNBRRZ2S">Donate</a></li> -->
         </ul>
@@ -88,10 +88,12 @@
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
             <h1>CPM (Anglican)</h1>
-            <h2>Resources for the Church of the Province of Myanmar (Anglican)</h2>
-            <a target="_blank" href="https://apps.apple.com/app/cpm-anglicanbook/id1548411106" class="download-btn"><i class="bx bxl-apple"></i> App Store</a>
-            <a target="_blank" href="https://play.google.com/store/apps/details?id=app.anglicanbook.cpm" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
-            <a target="_blank" href="https://apkpure.com/cpm-anglicanbook/app.anglicanbook.cpm" class="download-btn"><i class="bx bxl-android"></i> APK</a>
+            <h2 class="text-dark">Resources for the Church of the Province of Myanmar (Anglican)</h2>
+            <a target="_blank" href="https://apps.apple.com/app/cpm-anglicanbook/id1548411106" class="download-btn mb-2"><i class="bx bxl-apple"></i> App Store</a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-play-store"></i> Google Play</a>
+            <a target="_blank" href="https://apkpure.com/cpm-anglicanbook/app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-android"></i> APKPure</a>
+            <a target="_blank" href="https://appgallery.huawei.com/app/C105563681" class="download-btn mb-2"><i class="bx bxl-android"></i> AppGallery (Huawei)</a>
+            <a target="_blank" href="https://galaxystore.samsung.com/detail/app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-android"></i> Galaxy Store (Samung)</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
