--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
           </li>
           <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li>  -->
           <!-- <li><a class="getstarted scrollto" href="https://www.paypal.com/donate/?hosted_button_id=Y9K24XNBRRZ2S">Donate</a></li> -->
+          <li><a target="_blank" class="getstarted scrollto" href="https://facebook.com/AnglicanMyanmar">Facebook</a></li>
+          <li><a target="_blank" class="getstarted scrollto" href="https://instagram.com/AnglicanMyanmar">Instagram</a></li>
+          <li><a target="_blank" class="getstarted scrollto" href="https://twitter.com/AnglicanMyanmar">Twitter</a></li>
+          <li><a target="_blank" class="getstarted scrollto" href="https://youtube.com/AnglicanMyanmar">YouTube</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
