add web app link

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <h2 class="text-dark">Resources for the Church of the Province of Myanmar (Anglican)</h2>
             <a target="_blank" href="https://apps.apple.com/app/cpm-anglicanbook/id1548411106" class="download-btn mb-2"><i class="bx bxl-apple"></i> App Store</a>
             <a target="_blank" href="https://play.google.com/store/apps/details?id=app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-play-store"></i> Google Play</a>
+            <a target="_blank" href="https://cpm-anglicanbook.web.app" class="download-btn mb-2"><i class="bx bx-atom"></i> Web App</a>
             <a target="_blank" href="https://apkpure.com/cpm-anglicanbook/app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-android"></i> APKPure</a>
             <a target="_blank" href="https://appgallery.huawei.com/app/C105563681" class="download-btn mb-2"><i class="bx bxl-android"></i> AppGallery (Huawei)</a>
             <a target="_blank" href="https://galaxystore.samsung.com/detail/app.anglicanbook.cpm" class="download-btn mb-2"><i class="bx bxl-android"></i> Galaxy Store (Samung)</a>
