--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="logo">
         <h1><a href="index.html">CPM (Anglican)</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <a href="index.html"><img loading="lazy" width="100%" height="auto" src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="https://app.anglicanmyanmar.org/logocpm.png" class="img-fluid" alt="">
+          <img loading="lazy" width="100%" height="auto" src="https://app.anglicanmyanmar.org/logocpm.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@
             </div>
           </div>
           <!-- <div class="image col-xl-5 d-flex align-items-stretch justify-content-center order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/features.svg" class="img-fluid" alt="">
+            <img loading="lazy" width="100%" height="auto" src="assets/img/features.svg" class="img-fluid" alt="">
           </div> -->
         </div>
 
@@ -178,18 +178,18 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="assets/img/gallery/1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/1.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/2.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/3.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/4.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/5.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/6.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/7.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/8.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/9.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/10.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/11.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/12.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img loading="lazy" width="100%" height="auto" src="assets/img/gallery/12.png" class="img-fluid" alt=""></a></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
